# netocracy

./: .gitignore  CMakeLists.txt  README.md
project/: project.tex
server/: Makefile  map.cpp  terrain.cpp  utils.cpp  validate_map_creator.cpp  worldmap.cpp
server/include/: map.hpp  worldmap.hpp
server/test/: mapTest.cpp
